2006-04-20  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/ImageIcon.java:
	(AccessibleImageIcon.getAccessibleStateSet): Return null always,
	(AccessibleImageIcon.getLocale): Declared exception and always return 
	null,
	(getAccessibleContext): Updated API docs,
	plus updated API docs all over AccessibleImageIcon.

2006-04-20  Roman Kennke  <kennke@aicas.com>

	PR 27196
	* javax/swing/plaf/basic/BasicTabbedPaneUI.java
	(paintText): Fetch the ascent only once. Add the ascent to
	the text rect also when tabs are disabled.

2006-04-20  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* java/util/Locale.java (defaultLocale): Set to en_US per
	default and use user.country but prioritize user.region if
	defined.
	(getLocale(String language, String country)): Renamed region to
	country.
	(getLocale(String language, String region, String variant)):
	Likewise.
	(getAvailableLocales): Likewise.

2006-04-20  Roman Kennke  <kennke@aicas.com>

	PR 27222
	* javax/swing/JList.java
	(JList()): Call init() with DefaultListModel instance.
	(JList(Object[])): Call init() with null.
	(JList(Vector)): Call init() with null.
	(JList(ListModel)): Call init() with model.
	(init): Changed to take the model as argument. Don't call
	setter methods and initialize stuff directly instead.
	(getCellBounds): Check if UI is null.

2006-04-20  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/WrappedPlainView.java: Initialize
	WrappedLine.numLines with -1.
	(WrappedPlainView.WrappedLine.getPreferredSpan): Check whether
	numLines is -1 and reculcalate the value appropriately.
	(WrappedPlainView.WrappedLine.updateDamage): Set numLines to -1 if
	allocation area is empty.

2006-04-20  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JTabbedPane.java
	(AccessibleJTabbedPane.stateChanged): Marked as stub,
	(AccessibleJTabbedPane.getAccessibleRole): Likewise,
	(AccessibleJTabbedPane.getAccessibleChildrenCount): Likewise,